--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+.all{
+  
+  background: rgb(0,138,168);
+  background: linear-gradient(158deg, rgba(0,138,168,1) 0%, rgba(0,172,188,1) 54%);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.bg{
+  
+  z-index: 0;
+ backdrop-filter: blur(15px);
+ background: rgba( 10, 26, 68, 0.25 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 4px );
+-webkit-backdrop-filter: blur( 4px );
+border-radius: 10px; 
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.Texte {
+  color:white;
+  background: url(./assets/images/Screenshot2023-10-10at10-56-26setinfoclub.png) -100px -40px no-repeat;
+  -webkit-background-clip: text;
+   -webkit-text-fill-color: transparent;
+}
+
+.image{
+  object-fit: contain;
+}
+
+.anim{
+  animation: animate 1s linear infinite alternate-reverse;
+}
+
+@keyframes animate {
+  0%{
+      transform: translateY(15px);
+  }
+  100%{
+      transform: translateY(0);
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media (max) {
+  
 }
