--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-.all{
+/*.all{
   
   background: rgb(0,138,168);
   background: linear-gradient(158deg, rgba(0,138,168,1) 0%, rgba(0,172,188,1) 54%);
-}
+}*/
 
 .bg{
   
